# STARRGazer

./: .flutter-plugins  .flutter-plugins-dependencies  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  gimalmotor.py  home.html  install.sh  pubspec.yaml  test.py  testcv2.py  ustarr_sim.slx  wifi_original.py  wifi_sep_stream_rec.py  wifi_single_stream_record_compress.py
assets/: fake_cord_data.txt
lib/: main.dart
linux/: CMakeLists.txt
live_stream/: README.md  index.html  nginx.conf  opencamera.sh  reciver.py  start.py
pico/: main.py  pwm_test.py
pythonmap/: app.py  backend.py  datatypes.py  main.py  pyproject.toml  requirements.txt
pythontests/: testcv2.py  wifi_original.py  wifi_sep_stream_rec.py  wifi_single_stream_record_compress.py
rocketUI/: fake_date_generator.py  server.py
src/: capture.c  encoder.c  filtered.c  savecapture.c  udpsinkwithh264.c
starr_gazer_hardware_system/: '  .gitignore  Makefile  README.md  STARRGazer_embeddedcode.cpp  STARRGazer_embeddedcode.h  STARRGazer_embeddedcode_data.cpp  camera_init.sh  common.py  ert_main.cpp  main.py  model.py  motor.py  pyproject.toml  rtwtypes.h  serial.py  tracker.py  tracker.py~
starr_gazer_hardware_system/models/: model.yaml
starr_gazer_hardware_system/pico/: main.py
starr_gazer_hardware_system/src/: .motor_test.cpp.swp  camera.cpp  camera.hpp  camera_test.cpp  main.cpp  motor.cpp  motor.hpp  motor_test.cpp  safequeue.hpp  thread.cpp
starr_gazer_system_1/: README.md  pubspec.yaml
starr_gazer_system_2/: README.md  pubspec.yaml
test/: widget_test.dart
(+64 files in other folders)
